# sentiment_log_reg

./: .gitignore  README.md  pyproject.toml
sentiment_log_reg/: homework.ipynb  test.ipynb
sentiment_log_reg/dmia/: gradient_check.py  utils.py
sentiment_log_reg/dmia/classifiers/: logistic_regression.py
